--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#8C9295</color>
     <color name="green">#2ECC71</color>
     <color name="mainColor">#C0E6F7</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
