--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="skyblue">#3498DB</color>
+    <color name="skyblue">#C0E6F7</color>
     <color name="gray">#8C9295</color>
     <color name="green">#2ECC71</color>
     <color name="mainColor">#C0E6F7</color>
