--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -22,11 +22,11 @@
             android:background="@color/skyblue"
             android:src="@drawable/back_button_35"
             />
-        <ImageButton
-            android:id="@+id/customBarUserInfoImageView"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/customProfileImage"
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:background="@color/skyblue"
             android:src="@drawable/user_ionfo_65" />
         <TextView
             android:id="@+id/customBarUserNameTextView"
@@ -35,6 +35,7 @@
             android:text="사용자 이름"
             android:textSize="23sp"
             android:gravity="center"/>
+
         <ImageButton
             android:id="@+id/customBarSearchImageView"
             android:layout_width="60dp"
