--- a/app/src/main/res/layout/activity_profile_information.xml
+++ b/app/src/main/res/layout/activity_profile_information.xml
@@ -4,13 +4,213 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileInformation">
+    tools:context=".ProfileInformation"
+    android:background="@color/white">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/customProfileImage"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:src="@drawable/user_ionfo_65"/>
+    <TextView
+        android:id="@+id/profileInfoFollower"
+        android:text="팔로워"
+        style="@style/userInfoFollowStyle"
+        android:layout_marginStart="85dp"
+        app:layout_constraintStart_toEndOf="@id/customProfileImage"
+        app:layout_constraintTop_toTopOf="@id/customProfileImage"
+        app:layout_constraintEnd_toStartOf="@id/profileInfoFollowing"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/profileInfoFollowing"
+        style="@style/userInfoFollowStyle"
+        android:text="팔로잉"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toEndOf="@id/profileInfoFollower"
+        app:layout_constraintTop_toTopOf="@+id/customProfileImage" />
+    <TextView
+        android:id="@+id/profileInfoUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="상세 화면 페이지 입니다."
-        tools:layout_editor_absoluteX="206dp"
-        tools:layout_editor_absoluteY="141dp" />
+        android:text="이름(닉네임)"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/customProfileImage"
+        app:layout_constraintStart_toStartOf="@id/customProfileImage" />
+    <TextView
+        android:id="@+id/profileInfoFollowerCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="100"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/profileInfoFollower"
+        app:layout_constraintStart_toStartOf="@id/profileInfoFollower"
+        app:layout_constraintEnd_toEndOf="@id/profileInfoFollower"/>
+    <TextView
+        android:id="@+id/profileInfoFollowingCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="100"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/profileInfoFollowing"
+        app:layout_constraintStart_toStartOf="@id/profileInfoFollowing"
+        app:layout_constraintEnd_toEndOf="@id/profileInfoFollowing"/>
+
+    <ImageButton
+        android:id="@+id/profileInfoGoToMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:src="@drawable/messenger_32"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="@id/profileInfoFollowerCount"
+        app:layout_constraintStart_toStartOf="@id/profileInfoFollowerCount"
+        app:layout_constraintTop_toBottomOf="@id/profileInfoFollowerCount" />
+
+    <ImageButton
+        android:id="@+id/userBlock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:src="@drawable/block_64"
+        app:layout_constraintEnd_toEndOf="@id/profileInfoFollowingCount"
+        app:layout_constraintStart_toStartOf="@id/profileInfoFollowingCount"
+        app:layout_constraintTop_toBottomOf="@id/profileInfoFollowingCount" />
+    <View
+        android:id="@+id/guidLine1"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/black"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/userBlock"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/currentLocation"
+        style="@style/userInfoStyle"
+        android:layout_marginTop="15dp"
+        android:text="현재 위치 :"
+        app:layout_constraintEnd_toStartOf="@+id/guideLine2"
+        app:layout_constraintStart_toStartOf="@id/customProfileImage"
+        app:layout_constraintTop_toBottomOf="@id/guidLine1" />
+
+    <TextView
+        android:id="@+id/recentPlace"
+        style="@style/userInfoStyle"
+        android:layout_marginTop="20dp"
+        android:text="최근 장소 :"
+        app:layout_constraintEnd_toStartOf="@+id/guideLine2"
+        app:layout_constraintStart_toStartOf="@id/customProfileImage"
+        app:layout_constraintTop_toBottomOf="@id/currentLocation" />
+
+    <TextView
+        android:id="@+id/mbti"
+        style="@style/userInfoStyle"
+        android:layout_marginTop="20dp"
+        android:text="M B T I :"
+        app:layout_constraintEnd_toStartOf="@+id/guideLine2"
+        app:layout_constraintStart_toStartOf="@id/customProfileImage"
+        app:layout_constraintTop_toBottomOf="@id/recentPlace" />
+
+    <TextView
+        android:id="@+id/battery"
+        style="@style/userInfoStyle"
+        android:layout_marginTop="20dp"
+        android:text="배터리 잔량 :"
+        app:layout_constraintEnd_toStartOf="@+id/guideLine2"
+        app:layout_constraintStart_toStartOf="@id/customProfileImage"
+        app:layout_constraintTop_toBottomOf="@id/mbti" />
+    <TextView
+        android:id="@+id/behaviorPattern"
+        style="@style/userInfoStyle"
+        android:text="AI가 분석한 행동패턴"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/battery"
+        app:layout_constraintStart_toStartOf="@id/customProfileImage"/>
+
+    <TextView
+        android:id="@+id/aiBehaviorPatternValue"
+        android:layout_width="350dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/edittext_square"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/behaviorPattern"
+        app:layout_constraintTop_toBottomOf="@id/behaviorPattern"
+        app:layout_constraintVertical_bias="0.176" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideLine2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.4" />
+
+    <TextView
+        android:id="@+id/currentLocationValue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="부산시 북구 구포동..."
+        android:gravity="end"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintStart_toEndOf="@id/guideLine2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBottomOf="@id/currentLocation"/>
+    <TextView
+        android:id="@+id/recentPlaceValue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="부산시 북구 구포동..."
+        android:gravity="end"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintStart_toEndOf="@id/guideLine2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBottomOf="@id/recentPlace"/>
+
+    <TextView
+        android:id="@+id/mbtiValue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="ISTP"
+        android:gravity="end"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintStart_toEndOf="@id/guideLine2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBottomOf="@id/mbti"/>
+
+    <TextView
+        android:id="@+id/batteryValue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="55%"
+        android:gravity="end"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintStart_toEndOf="@id/guideLine2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBottomOf="@id/battery"/>
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
