--- a/app/src/main/res/values/loginpage_style.xml
+++ b/app/src/main/res/values/loginpage_style.xml
@@ -12,4 +12,19 @@
         <item name="android:layout_marginTop">30dp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="userInfoFollowStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="userInfoStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
